--- a/index page 2.html
+++ b/index page 2.html
@@ -52,78 +52,30 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<!--article class="post featured">
 								<header class="major">
-									<span class="date">September, 2020</span>
-									<h2><a href="#">An Unknown Day</a></h2>
-									<h3>About KRYSTAL</h3>
-									<p>This photo series “About Krystal” portrays the issues that high school students face in contemporary society such as loneliness for 
-										not having parents’ companionship, emotional instability caused by puberty, and limited time of sleep due to the large amount of 
-										school assignments.</p>
+									<span class="date">April 25, 2017</span>
+									<h2><a href="#">And this is a<br />
+									massive headline</a></h2>
+									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
+									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
+									amet nullam sed etiam veroeros.</p>
 								</header>
-								<a href="About Krystal.html" class="image main"><img src="images/metro.JPG" alt="" /></a>
+								<a href="project1.html" class="image main"><img src="images/rain.JPG" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Photos</a></li>
 								</ul>
-							</article>
+							</article-->
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">July 15, 2020</span>
-										<h2><a href="#">Shanghai<br />
-										Disneyland</a></h2>
+										<span class="date">September 6, 2020</span>
+										<h2><a href="#">Six<br/>
+										In the Morning</a></h2>
 									</header>
-									<a href="Disney.html" class="image fit"><img src="images/d01-1.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="Disney.html" class="button">View Photos</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">August 9, 2020</span>
-										<h2><a href="#">Teppanyaki<br />
-										铁板烧</a></h2>
-									</header>
-									<a href="tennyaki.html" class="image fit"><img src="images/t01.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="tennyaki.html" class="button">View Photos</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">August 22, 2020</span>
-										<h2><a href="#">Good night<br />
-										BinJiang AVENUE</a></h2>
-									</header>
-									<a href="Binjiang.html" class="image fit"><img src="images/b01.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="Binjiang.html" class="button">View Photos</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">August 23, 2020</span>
-										<h2><a href="#">SongJiang<br />
-										Film Studio</a></h2>
-									</header>
-									<a href="Songjiang Film Studio.html" class="image fit"><img src="images/f01.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="action special">
-										<li><a href="Songjiang Film Studio.html" class="button">View Photos</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">August 27, 2020</span>
-										<h2><a href="#">TX<br />
-										Huai Hai</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Photos</a></li>
@@ -131,9 +83,9 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">August 30 - September 1, 2020</span>
-										<h2><a href="#">Orenda<br />
-										Chong Ming</a></h2>
+										<span class="date">September 10, 2020</span>
+										<h2><a href="#">Happy<br />
+										Teacher's Day</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -147,8 +99,8 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="index page 2.html" class="page">2</a>
+									<a href="index.html" class="page">1</a>
+									<a href="#" class="page active">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
