--- a/About Krystal.html
+++ b/About Krystal.html
@@ -6,20 +6,20 @@
 -->
 <html>
 	<head>
-		<title>Tennyaki</title>
+		<title>About Krystal</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main1.css" />
+		<link rel="stylesheet" href="assets/css/aboutk.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/t02.jpg" alt="" /></a>
-					<h1><strong>The moment </strong>of<br />
-					The Visible Flame<br />
-					<!--<a href="http://html5up.net">HTML5 UP</a>.--></h1>
+				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
+					<h1><strong></strong><br />
+					<br />
+					<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
 
@@ -29,12 +29,25 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About K.</h2><br />
+							<h3>A high school student</h3>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>The idea of this series is to capture a common day of my friend Krystal, who is a high 
+							school student in Shanghai. Being a high school student is very stressful, especially 
+							in a metropolitan like Shanghai where everybody has great expectations. This photo series 
+							“About Krystal” portrays the issues that high school students face in contemporary society 
+							such as loneliness for not having parents’ companionship, emotional instability caused by 
+							puberty, and limited time of sleep due to the large amount of school assignments. The series 
+							starts with the early morning scene, in which Krystal waits the arrival of the subway, finishes 
+							off by exercising to maintain a good body shape.  These mundane tasks reflect a social phenomenon 
+							among all high school students, as they are the generations who receive attention only for their 
+							academics, but neglected otherwise. I hope my images can disclose the story behind this group and 
+							raise awareness about teenagers’ mental and physical health.
+						</p><br>
+
+						
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">View</a></li>
 						</ul>
 					</section>
 
@@ -43,39 +56,116 @@
 						<h2>Photos</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t02.jpg" class="image fit thumb"><img src="images/t02.jpg" alt="" /></a>
-								<h3>Onsen Tamago with Caviar</h3>
-								<p>鱼籽酱温泉蛋</p>
+								<a href="images/fulls/“About Me''.jpg" class="image fit thumb"><img src="images/“About Me''.jpg" alt="" /></a>
+								<h3>About Krystal</h3>
+								<p>This is a photo collage of a morning scene in my city (Shanghai). The scene is composed of delicious breakfast, hardworking workers, 
+									morning exercise group and Krystal, a high school student who are waiting for the metro to school. The purpose of this photo is to give 
+									the audiences a glance of an ordinary day in the city, and introduce the main character of this series. I used candid photography style 
+									and fast shutter speed to capture all these moments, and then used Photoshop to cut those images into the shape of the well-known 
+									architecture of Oriental Pearl TV Tower. I combined different scenes to show the diversity of the city, from the elderly to children, 
+									and the key character in my project, Krystal, is highlighted with color.
+									<br>
+									As a high school student, she sometimes is being ignored and receives less attention from contemporary society, other than her education.
+									<br>
+									Photo by: Sony A6400
+									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t03.jpg" class="image fit thumb"><img src="images/t03.jpg" alt="" /></a>
-								<h3>Australian Live Lobster</h3>
-								<p>澳洲鲜活龙虾</p>
+								<a href="images/fulls/''Just For a Few minutes''.jpg" class="image fit thumb"><img src="images/''Just For a Few minutes''.jpg" alt="" /></a>
+								<h3>Just For a Few minutes</h3>
+								<p>In this photograph, I want to propose a very realistic moment for high school students - taking a nap on the public transportation. Intensive 
+									exams and school assignments often take away our precious sleeping hours, therefore we can only use fragmented period to catch up on sleep. 
+									I placed my camera two rows after Krystal and shot from my eye level, in order to capture her exhausting facial expression. Also, viewers are 
+									easier to be drawn into the photo from my eye level as if they are passengers sitting behind her. I did not purposely alter the color of this 
+									image because I want to present this scene in the most realistic way since it is very common in our daily lives.
+									<br>
+									Photo by: Sony A6400
+									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t04.jpg" class="image fit thumb"><img src="images/t04.jpg" alt="" /></a>
-								<h3>Australian Live Abalone with Seaweed Sause</h3>
-								<p>澳洲鲜活鲍鱼佐海苔酱</p>
+								<a href="images/fulls/''Bicycles''.jpg" class="image fit thumb"><img src="images/''Bicycles''.jpg" alt="" /></a>
+								<h3>Bicycles</h3>
+								<p>Although nowadays there are various convenient transportations that we can choose from, bicycles are still Krystal’s favorite. She often 
+									commutes in bicycles from home to school, and during this period, she likes to indulge in her imagination as she looks around, observes, 
+									tries to capture the moment that she have missed in her busy day, and attains inspirations from the old brick walls and the citizens  along 
+									the way. Thus, in my picture, I overlapped two images of Krystal riding bicycle, which symbolized an around trip between home and school. I 
+									lowered my shutter speed to 1/13 to capture two motion blur images. The photo is warm-toned because I want to express the sense of joy and 
+									comfort that Krystal experiences on the bicycle, as she finally has a moment to take a deep breath from all the stress.
+								<br>
+								Photo by: A6400
+								</p>
+						
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t05.jpg" class="image fit thumb"><img src="images/t05.jpg" alt="" /></a>
-								<h3>Australian Angus Grain-Fed Fresh Beef Rib-Eye Steak</h3>
-								<p>澳洲安格斯谷饲冰鲜眼肉牛排</p>
+								<a href="images/fulls/''Sky''.jpg" class="image fit thumb"><img src="images/''Sky''.jpg" alt="" /></a>
+								<h3>Sky</h3>
+								<p>Krystal loves to stare at the boundless sky and zone out, and she always pulls out her camera in order to look at the 
+									sky in a closer distance, in her words: she wants to be closer to the sky. To her, the moment of looking up can 
+									temporarily relief pressures and ease her worries. In this picture, I was standing one step behind Krystal, and 
+									lowered my camera into an angle to focus on her cellphone and the blue sky that she was staring. Then I saturated 
+									the color of the sky view on her phone screen to portray a “perfect” world that seems to be far away from her. 
+									<br>
+									Photo by: Sony A6400
+									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t06.jpg" class="image fit thumb"><img src="images/t06.jpg" alt="" /></a>
-								<h3>Australian Angus Grain-Fed Fresh Beef Rib-Eye Steak</h3>
-								<p>澳洲安格斯谷饲冰鲜眼肉牛排</p>
+								<a href="images/fulls/''Friend''.jpg" class="image fit thumb"><img src="images/''Friend''.jpg" alt="" /></a>
+								<h3>Friends</h3>
+								<p>For most high school students in Shanghai, they lack companionship since their parents are busy with their work, 
+									therefore, despite classmates, pets are the only ones they can spend time with. I used reflection in this photo 
+									because pets are somewhat similar to us, as they also desire attention from others. I placed two characters, 
+									Krystal and the dog Lamber into mirrored position, and then cut out the opposite two characters and lower their 
+									transparency to create contrast and demonstrate the idea that they complement each other.
+									<br>
+									Photo by: Sony A6400
+									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t07.jpg" class="image fit thumb"><img src="images/t07.jpg" alt="" /></a>
-								<h3>Onsen Tamago with Caviar</h3>
-								<p>鱼籽酱温泉蛋</p>
+								<a href="images/fulls/Moment .jpg" class="image fit thumb"><img src="images/Moment .jpg" alt="" /></a>
+								<h3>The Decisive Moment - Mimic</h3>
+								<p>
+									<br>
+									Photo by: Sony A6400
+									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/t08.jpg" class="image fit thumb"><img src="images/t08.jpg" alt="" /></a>
-								<h3>Flame Icecream</h3>
-								<p>火焰冰激凌</p>
+								<a href="images/fulls/''Americano''.jpg" class="image fit thumb"><img src="images/''Americano''.jpg" alt="" /></a>
+								<h3>Americano</h3>
+								<p>Americano is the considered to be Krystal’s best friend, as it allows keep her to stay awake. For this picture, 
+									I grouped two pictures together in diagonal line for viewers to better identify the difference between the two. 
+									I adjusted the shutter speed without changing the position, in order to capture two different moments while she 
+									was shaking the coffee to have a better mix. The blurring scene represents the dizziness she feels without enough 
+									sleep, and that turns out to be the reason for her to acquire the external help from coffee. The second image is 
+									very sharp and clear, which displays the effect of coffee as it stabilizes her dizziness, and Krystal is now able 
+									to continue her daily tasks. Though Americano is bitter, she has to swallow it in order to achieve high efficiency 
+									in her studies. 
+									<br>
+									Photo by: Sony A6400
+									</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/Phone .jpg" class="image fit thumb"><img src="images/Phone .jpg" alt="" /></a>
+								<h3>Phones</h3>
+								<p>
+									<br>
+									Photo by: Sony A6400
+									</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/Exercise .jpg" class="image fit thumb"><img src="images/Exercise .jpg" alt="" /></a>
+								<h3>Run</h3>
+								<p>
+									<br>
+									Photo by: Sony A6400
+									</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/Emotion .jpg" class="image fit thumb"><img src="images/Emotion .jpg" alt="" /></a>
+								<h3>Emotions</h3>
+								<p>
+									<br>
+									Photo by: Sony A6400
+									</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -86,7 +176,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p></p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -451,7 +541,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul-->
 					<ul class="copyright">
-						<li>&copy;Jinyuan</li><!--li>Design: <a href="http://html5up.net">HTML5 UP</a></li-->
+						<li>&copy; Jinyuan</li><!--li>Design: <a href="http://html5up.net">HTML5 UP</a></li-->
 					</ul>
 				</div>
 			</footer>
