--- a/Binjiang.html
+++ b/Binjiang.html
@@ -6,17 +6,17 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>BinJiang Avenue</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main2.css" />
+		<link rel="stylesheet" href="assets/css/main3.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a>
+				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
 					<!--h1><strong>I am Strata</strong>, a super simple<br />
 					responsive site template freebie<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1-->
@@ -40,60 +40,45 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Photos</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f01.jpg" class="image fit thumb"><img src="images/f01.jpg" alt="" /></a>
+								<a href="images/fulls/b01.jpg" class="image fit thumb"><img src="images/b01.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f02.jpg" class="image fit thumb"><img src="images/f02.jpg" alt="" /></a>
+								<a href="images/fulls/b07.jpg" class="image fit thumb"><img src="images/b07.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f03.jpg" class="image fit thumb"><img src="images/f03.jpg" alt="" /></a>
+								<a href="images/fulls/b03.jpg" class="image fit thumb"><img src="images/b03.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f04.jpg" class="image fit thumb"><img src="images/f04.jpg" alt="" /></a>
+								<a href="images/fulls/b04.jpg" class="image fit thumb"><img src="images/b04.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f05.jpg" class="image fit thumb"><img src="images/f05.jpg" alt="" /></a>
+								<a href="images/fulls/b05.jpg" class="image fit thumb"><img src="images/b05.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f06.jpg" class="image fit thumb"><img src="images/f06.jpg" alt="" /></a>
+								<a href="images/fulls/b06.jpg" class="image fit thumb"><img src="images/b06.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f07.jpg" class="image fit thumb"><img src="images/f07.jpg" alt="" /></a>
+								<a href="images/fulls/b02.jpg" class="image fit thumb"><img src="images/b02.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f08.jpg" class="image fit thumb"><img src="images/f08.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f09.jpg" class="image fit thumb"><img src="images/f09.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f10.jpg" class="image fit thumb"><img src="images/f10.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/f11.jpg" class="image fit thumb"><img src="images/f11.jpg" alt="" /></a>
+								<a href="images/fulls/b08.jpg" class="image fit thumb"><img src="images/b08.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
