--- a/elements.html
+++ b/elements.html
@@ -25,8 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="index.html">Gallery</a></li>
+							<li><a href="aboutme .html">About Me</a></li>
 							<li class="active"><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
