--- a/About Krystal.html
+++ b/About Krystal.html
@@ -122,8 +122,13 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Moment .jpg" class="image fit thumb"><img src="images/Moment .jpg" alt="" /></a>
-								<h3>The Decisive Moment - Mimic</h3>
-								<p>
+								<h3>Jump</h3>
+								<p>This photo is inspired by the well-known photographer Henri Cartier-Bresson’s “The Decisive Moment”. In 
+									this image, Krystal is jumping over a puddle from yesterday’s rain. This is an enjoyable moment many 
+									of us have when we were little kids, and I want to capture that innocent joy and sense of easiness that 
+									are within us. I set shutter speed to 1/200 and increased the light intensity to show her reflection on 
+									the puddle, and I increased the contrast ratio to show the reflected sky on the puddle which provides a 
+									sense of freedom to Krystal.
 									<br>
 									Photo by: Sony A6400
 									</p>
@@ -146,15 +151,25 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Phone .jpg" class="image fit thumb"><img src="images/Phone .jpg" alt="" /></a>
 								<h3>Phones</h3>
-								<p>
+								<p>Cell phone has become an inseparable part of our daily lives. We use it for communication, internet surfing, 
+									catching up the newest event in the world, etc. In this photo, I edited the most commonly used apps to fill 
+									in the space on the phone screen, and they are great platforms for Krystal to share ideas and pictures online. 
+									Krystal has made lots of friends through applications such as Facebook and Weibo, as they allow her to connect 
+									people from different places around the globe.
 									<br>
 									Photo by: Sony A6400
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Exercise .jpg" class="image fit thumb"><img src="images/Exercise .jpg" alt="" /></a>
-								<h3>Run</h3>
-								<p>
+								<h3>Jogging</h3>
+								<p>Body shape and appearance are emerging topics around high school students, as we start to learn how to dress and how 
+									to put on makeups. We are more sensitive to the other’s comments, and because of that, Krystal always takes out some 
+									time to jog at night to maintain a good body shape, even after a day of busy work. For this photo, I adjusted the 
+									shutter speed to 1/200 in order to capture the sweat droplets hanging on her chin, and then I took another photo of 
+									her running on the track along the riverside with higher light intensity and contrast ratio. I put these two photos 
+									together to show that caring too much about others’ opinions could cause great mental pain, just like Krystal, who 
+									can only bear the pain and exhaustion by herself.
 									<br>
 									Photo by: Sony A6400
 									</p>
@@ -162,7 +177,13 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Emotion .jpg" class="image fit thumb"><img src="images/Emotion .jpg" alt="" /></a>
 								<h3>Emotions</h3>
-								<p>
+								<p>This image is consisted of 5 different images, and as the light intensity gradually decreases from the first one of the 
+									left to the last one, the emotion of Krystal changes drastically. Emotional instability is something that bothers high 
+									school students, which could be caused by puberty. In the morning, Krystal feels delighted because she is about to be in 
+									the school with other classmates, which is clearly demonstrated by the smile of Krystal as she rides on the bus and 
+									walks on the streets. Throughout the day, pressure accumulates from both homework and the uncertainty of the future, 
+									therefore, she experiences a sense of loneliness and melancholy, which I used dark filter to signify that emotion. I 
+									also used mosaics to blur the side between images to display that vague transition from each emotion.
 									<br>
 									Photo by: Sony A6400
 									</p>
